@@ -63,8 +63,9 @@ CheckLogFile = disabled
 
 
 [/settings/default]
-; allowed hosts - List of ips/networks/hostname allowed to connect.
-allowed hosts = 127.0.0.1, ::1
+; allowed hosts - Comma separated list of ips/networks/hostname allowed to connect.
+allowed hosts  = 127.0.0.1
+allowed hosts += ::1
 
 ; cache allowed hosts - Cache resolved dns names.
 cache allowed hosts = true
@@ -311,6 +312,16 @@ require password = true
 
 ; disabled - Disable this command
 disabled = false
+
+
+; check_logfile settings - configure settings for check_logfile
+; do not mix up with log settings for the snclient itself which are in [/settings/log]
+[/settings/check/logfile]
+
+; allowed pattern - Comma separated list of glob pattern which are allowed to be checked by check_logfile
+allowed pattern  = /var/log/**
+allowed pattern += ${shared-path}/*.log
+allowed pattern += /var/log/snclient/snclient.log
 
 
 ; External script settings - General settings for the external scripts module (CheckExternalScripts).
