@@ -2,3 +2,10 @@
 allowed hosts  = 127.0.0.1, ::1
 allowed hosts += , 192.168.0.1
 allowed hosts += , 192.168.0.2,192.168.0.3
+
+nasty characters  = 123
+nasty characters += 456
+
+[/settings/check/logfile]
+allowed pattern  = /var/log/**
+allowed pattern += **/*.log
